--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vite-plugin-pwa": "^0.14.4",
+    "vite-plugin-rewrite-all": "^1.0.1",
     "vue-tsc": "^1.0.12"
   }
 }
