--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.5.0",
+    "ol": "^8.1.0",
+    "ol-contextmenu": "^5.3.0",
+    "ol-ext": "^4.0.11",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-openlayers": "^2.0.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
