--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@vueuse/core": "^10.5.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "webrtc-ips": "^0.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
