--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.5.0",
+    "cidr-tools": "^7.0.2",
+    "ip-bigint": "^8.0.0",
+    "is-cidr": "^5.0.3",
     "is-ip": "^5.0.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
